[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"
# Pin blake3 to avoid edition2024 requirement (Solana BPF toolchain uses rustc 1.79)
blake3 = "=1.6.1"

[dev-dependencies]
litesvm = "0.10.0"
# Use split Solana crates compatible with litesvm 0.10.0 (Solana 3.x)
solana-account = "3.2"
solana-address = "2.0"
solana-clock = "3.0"
solana-keypair = "3.1"
solana-message = "3.0"
solana-rent = "3.0"
solana-signer = "3.0"
solana-transaction = "3.0"
solana-system-interface = "3.0"
solana-instruction = "3.0"
solana-program-option = "3.0"
solana-program-pack = "3.0"
solana-hash = "3.0"
solana-transaction-error = "3.0"
spl-token-interface = "2.0"
spl-associated-token-account-interface = "2.0"
sha2 = "0.10"
